# iai_robot_drivers

./: .gitignore  README.md
boxy_zero_gravity/: CMakeLists.txt  README.md  package.xml  setup.py
boxy_zero_gravity/launch/: boxy_zero_gravity.launch
boxy_zero_gravity/src/boxy_zero_gravity/: test_zero_gravity.py  zero_gravity.py
iai_kms_40_driver/: CMakeLists.txt  README.md  package.xml  setup.py
iai_kms_40_driver/include/iai_kms_40_driver/: driver.h  kms_40_driver.hpp  kms_40_driver_node.hpp  msg_conversions.hpp  node.hpp  parser.hpp  pthread_scoped_lock.hpp  socket_connection.hpp  wrench.hpp
iai_kms_40_driver/launch/: iai_kms_40_driver.launch  iai_kms_40_driver_donbot.launch
iai_kms_40_driver/scripts/: kms40_driver.py
iai_kms_40_driver/src/iai_kms_40_driver/: driver.cpp  kms40_driver.py  kms_40_driver.cpp  kms_40_driver_node.cpp  main.cpp  msg_conversions.cpp  socket_connection.cpp
iai_robot_drivers/: CMakeLists.txt  package.xml
iai_scanning_table/: CMakeLists.txt  package.xml
iai_scanning_table/scripts/iai_scanning_table/: st_action.py  st_action_client.py  st_control.py
iai_scanning_table_msgs/: CMakeLists.txt  package.xml
iai_scanning_table_msgs/action/: scanning_table.action
igh_eml/: CMakeLists.txt  package.xml
omni_ethercat/: CMakeLists.txt  package.xml  readme.txt
omni_ethercat/include/: omnilib.h  realtime.h
omni_ethercat/include/omni_ethercat/: ecat_iface.hpp  interpolator.hpp  omnilib.hpp
omni_ethercat/launch/: boxy.launch  donbot.launch
omni_ethercat/scripts/: fake_runstop.sh  home_torso.sh  with_realtime_tmp
omni_ethercat/src/: ecat_iface.cpp  interpolator.cpp  omni_ethercat.cpp  omni_ethercat2.cpp
omni_ethercat/src/omnilib/: omnilib.c  realtime.c
omni_ethercat/test/: main.cpp
omni_ethercat/test/omni_ethercat/: omnilib.cpp
soft_runstop/: CMakeLists.txt  README.md  package.xml
soft_runstop/include/soft_runstop/: Handler.h
soft_runstop/launch/: wii_a.launch
soft_runstop/src/: soft_runstop.cc
soft_runstop/src/soft_runstop/: soft_runstop.py
tdk_gen_power_sup/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
tdk_gen_power_sup/msg/: genesys_status.msg  genesys_status.msg~
tdk_gen_power_sup/scripts/: SerialCom.py  SerialCom.py~  SubscribePower.py~  escucha.py~  listener.py~  talker.py~
wsg50-tzi-ros-pkg/wsg50-tzi-ros-pkg/: CMakeLists.txt  package.xml
wsg50-tzi-ros-pkg/wsg_50/: CMakeLists.txt  package.xml
wsg50-tzi-ros-pkg/wsg_50/launch/: wsg_50_tcp.launch
wsg50-tzi-ros-pkg/wsg_50/src/: main.cpp
wsg50-tzi-ros-pkg/wsg_50_common/: CMakeLists.txt  package.xml
wsg50-tzi-ros-pkg/wsg_50_simulation/: CMakeLists.txt  CMakeLists.txt~  package.xml
wsg_50_common/: CMakeLists.txt
wsg_50_driver/: CMakeLists.txt  README.md  cmd_measure_without_official_fingers.lua  package.xml
wsg_50_driver/include/wsg_50/: common.h
wsg_50_driver/launch/: wsg_50_tcp.launch
wsg_50_driver/src/: common.cpp  functions.cpp  main.cpp  main_can.cpp
wsg_50_msgs/: CMakeLists.txt  package.xml
wsg_50_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
wsg_50_simulation/launch/: wsg_50.launch  wsg_50_for_kinematic_sim.launch
wsg_50_simulation/src/: wsg_50_sim_driver.cpp
wsg_50_simulation/src/wsg_50_simulation/: wsg_50_sim_driver.py
wsg_50_simulation/urdf/: wsg_50.urdf.xacro
