<?xml version="1.0"?>
<package>
  <name>iai_kms_40_driver</name>
  <version>0.1.0</version>
  <description>
    A C++ driver library and ROS node for the force/torque sensor
    KMS 40 from Weiss Robotics. Written and maintained at the 
    Institute of Artificial Intelligence, University of Bremen.
  </description>

  <author email="georgbartels@cs.uni-bremen.de">Georg Bartels</author>

  <maintainer email="georgbartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/code-iai/iai_robot_drivers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>iai_kms_40_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>boost</run_depend>
</package>
