<?xml version="1.0"?>
<package>
  <name>iai_robot_drivers</name>
  <version>0.0.1</version>
  <description>
    A collection of robot drivers maintained by the IAI group. Main
    characteristic shared by all drivers in this repository: They are
    used on several of the robots at the IAI lab, instead of just one.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>TODO</license>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iai_kms_40_driver</run_depend>
  <run_depend>soft_runstop</run_depend>
  <run_depend>tdk_gen_power_sup</run_depend>
  <run_depend>wsg_50_driver</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
