<?xml version="1.0"?>
<package>
  <name>iai_scanning_table_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the scanning table</description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>
  <license>gplv3+</license>

  <author email="amaldo@cs.uni-bremen.de">Alexis Maldonado</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
