<package>
  <name>wsg50-tzi-ros-pkg</name>
  <version>1.0.0</version>
  <description>
	Driver for ROS to control the WSG 50 gripper, both in simulated and real version (using TCP or CAN protocol). Part of this driver is based on the original standalone driver for TCP developed by Weiss Robotics.
  </description>
  <author>Robotnik Automation SLL</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/wsg50-ros-pkg</url>
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>wsg_50</run_depend>
  <run_depend>wsg_50_common</run_depend>
  <run_depend>wsg_50_simulation</run_depend>

</package>

