<package>
  <name>wsg_50_common</name>
  <version>1.0.0</version>
  <description>

     Define the msg and srv used both in simulation and real version of the gripper.

  </description>
  <author>Robotnik Automation SLL</author>
  <maintainer email="mustermann@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/wsg_50_common</url>
  <export>
    <!--<cpp cflags="-I${prefix}/include  -I${prefix}/msg_gen/cpp/include -I${prefix}/srv_gen/cpp/include"/>-->
  </export>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


